<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dejavucloset.iniciosesion.Registro">


    <ImageView
        android:id="@+id/imgAtras"
        android:layout_width="94dp"
        android:layout_height="90dp"
        android:onClick="irAtras"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/plaintext_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icon" />

        <EditText
            android:id="@+id/txtNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            android:textColor="@color/gris_light"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_above="@+id/linearLayout4"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/plaintext_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/location" />

        <Spinner
            android:id="@+id/spDistrito"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_above="@+id/linearLayout5"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/plaintext_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/map" />

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/direccion"
            android:inputType="textPersonName"
            android:textColor="@color/gris_light"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_above="@+id/linearLayout6"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/plaintext_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:srcCompat="@drawable/phone" />

        <EditText
            android:id="@+id/txtCelular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/celular"
            android:inputType="phone"
            android:textColor="@color/gris_light"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_above="@+id/linearLayout6"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/plaintext_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:srcCompat="@drawable/mail" />

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/gris_light"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_above="@+id/linearLayout6"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/plaintext_border"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/textPassword"
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColor="@color/gris_light"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/btnVer"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="mostrarClave"
            app:srcCompat="@drawable/ojo" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gradient"
        android:fontFamily="@font/poppins_medium"
        android:onClick="registrarUsuario"
        android:text="@string/registrarse"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:layout_constraintVertical_bias="0.385" />

    <ProgressBar
        android:id="@+id/pbRegistro"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>