<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa"
    tools:context=".EditarPerfil">

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="94dp"
        android:layout_height="90dp"
        android:onClick="irAtras"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="546dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-3dp"
        android:background="@drawable/shadow">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="341dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="95dp"
            android:background="@drawable/plaintext_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/icon" />

            <EditText
                android:id="@+id/etNombreP"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:inputType="textPersonName"
                android:text="@string/nombres"
                android:textColor="@color/gris_light"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="341dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/plaintext_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/map" />

            <EditText
                android:id="@+id/etDireccionP"
                android:layout_width="269dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:inputType="textPersonName"
                android:text="@string/direccion"
                android:textColor="@color/gris_light"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="341dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/plaintext_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/password" />

            <EditText
                android:id="@+id/etClaveP"
                android:layout_width="267dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:inputType="textPassword"
                android:text="@string/contraseña"
                android:textColor="@color/gris_light"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="341dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/plaintext_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/phone" />

            <EditText
                android:id="@+id/etCelularP"
                android:layout_width="269dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:inputType="number"
                android:text="@string/celular"
                android:textColor="@color/gris_light"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="341dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/plaintext_border"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/mail" />

            <EditText
                android:id="@+id/etMailP"
                android:layout_width="269dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                android:textColor="@color/gris_light"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnBienvenida"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/gradient"
            android:fontFamily="@font/poppins_light"
            android:onClick="editar"
            android:text="Actualizar"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/bottom_menu" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="158dp"
        android:layout_height="154dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="118dp"
        app:srcCompat="@drawable/perfil" />


</RelativeLayout>